--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Sen DevOps</title>
+    <title>Welcome to spring-boot </title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -92,13 +92,12 @@
         <h1>Welcome to Sen DevOps</h1>
     </header>
     <div>
-        <p>Thank you for visiting our Spring Boot application. We are thrilled to share our project with you!</p>
-        <p>Explore more and connect with us:</p>
-        <a href="https://github.com/Fir3eye" class="cta-button" target="_blank">Visit GitHub Page</a>
-        <a href="https://www.youtube.com/@SenDevOps" class="cta-button youtube-button" target="_blank">Visit YouTube Channel</a>
+        <p>Thank you for visiting our Spring Boot application. </p>
+        
+       
     </div>
     <footer>
-        <p>&copy; 2024 Sen DevOps. All rights reserved.</p>
+       
     </footer>
 </body>
 </html>
